fixed job updates
